[project]
name = "rslearn-ML"
version = "1.0.6"
description = "A simple sklearn-like ML library built from scratch"
authors = [
    { name="Rustam Singh Bhadouriya", email="rustambhadouriya7@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "numpy"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
